# rafiki

./: .env.example  .gitignore  .importlinter  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_INTEGRATION.md  CONTRIBUTING.md  HANDOFF.md  Makefile  README.md  ROADMAP.md  __init__.py  main.py  mypy-governance.ini  pyproject.toml  runner.py  runner_service.py  todo.md
.agent/: PLANS.md
.claude/agents/: boundary-enforcer.md  modal-docs-navigator.md  producthunt-release-drafter.md
.claude/plans/: twinkly-churning-puzzle-agent-ae1c650.md  twinkly-churning-puzzle.md
.github/: labels.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  scheduled-deploy.yml
.serena/: project.yml
agent_sandbox/: __init__.py  app.py  deploy.py  jobs.py  tracing.py
agent_sandbox/agents/: __init__.py  base.py  loop.py  registry.py
agent_sandbox/config/: __init__.py  settings.py
agent_sandbox/controllers/: __init__.py  cli_controller.py  controller.py  middleware.py
agent_sandbox/images/: __init__.py  base.py  claude_image.py  custom_image.py
agent_sandbox/middleware/: __init__.py  cloudflare_auth.py
agent_sandbox/prompts/: __init__.py  marketing.py  prompts.py  research.py
agent_sandbox/ralph/: git.py  (+11 more)
cloudflare-control-plane/: .gitignore  API.md  AUTH.md  DEPLOYMENT_CHECKLIST.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  PROJECT_FILES_SUMMARY.txt  README.md  WEBSOCKETS.md  package-lock.json  package.json  wrangler.jsonc
docs/: AGENT_COLLABORATION_PROCESS.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  api-usage.md  architecture.md  cloudflare-architecture.md  configuration.md  controllers.md  modal-ingress.md  multi-agent.md  ralph-git-clone-verification.md  tool-development.md  troubleshooting.md
edge-control-plane/: API.md  AUTH.md  DEPLOYMENT_CHECKLIST.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  PROJECT_FILES_SUMMARY.txt  README.md  biome.jsonc  dependency-cruiser.cjs  package-lock.json  package.json  typedoc.contracts.json  wrangler.jsonc
examples/: README.md
modal_backend/: __init__.py  controller_rollout.py  deploy.py  jobs.py  main.py  schedules.py  tracing.py
tests/: __init__.py  conftest.py  test_agent_runtime_session_fallback.py  test_agents_loop.py  test_artifact_access.py  test_code_quality_waivers.py  test_controller_rollout.py  test_controller_runtime_openai.py  test_controller_tools.py  test_controllers_exception_handler.py  test_controllers_middleware.py  test_controllers_serialization.py  test_edge_current_prompt_cleanup.py  test_images.py  test_internal_auth_middleware.py  test_jobs_cancellation.py  test_jobs_enqueue.py  test_jobs_security.py  test_python_boundary_config.py  test_query_proxy_error_normalization.py  test_ralph_feedback.py  test_ralph_git.py  test_ralph_loop.py  test_ralph_prd.py  test_ralph_progress.py  test_ralph_schemas.py  test_ralph_status.py  test_ralph_workspace.py  test_runtime_hardening.py  test_sandbox_auth_header.py  test_schedules.py  test_schemas_jobs.py  test_schemas_responses.py  test_schemas_sandbox.py  test_session_tools_context.py  test_settings_openai.py  test_tools_calculate.py  test_tracing.py  test_webhooks.py
utils/: __init__.py  env_templates.py  prompts.py  sandbox_helpers.py  schemas.py  tools.py
(+272 files in other folders)
