[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rafiki"
version = "0.2.0"
description = "Rafiki runtime with HTTP endpoints and tool integrations"
requires-python = ">=3.11"
dependencies = [
    "croniter>=2.0.5",
    "fastapi>=0.119.1",
    "langsmith[openai-agents]>=0.3.15",
    "llm-auto-context",
    "modal>=1.3.5",
    "openai-agents==0.9.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tzdata>=2025.1",
]

[project.optional-dependencies]
dev = [
    "import-linter>=2.3.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["modal_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "modal.*",
    "agents.*",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "import-linter>=2.3.0",
    "ruff>=0.14.10",
]
